==================================================
[B]ZattooHiQ v1.6.3 [/B]24.04.2018 Steffen Rolapp
==================================================
- Ja/Nein Abfrage Aufnahme löschen
- keymap.py überarbeitet
- Serienaufnahme löschen wird nur noch angezeigt wenn verfügbar
- User-Agent geändert

==================================================
[B]ZattooHiQ v1.6.2 [/B]08.04.2018 Steffen Rolapp
==================================================
- In der Vorschau Anzeige nächste sendung
- In Den Listen kontextmenür, wenn Verfügber Sendung von Anfang starten
- Kategorien zur keymap hinzugefügt
- Hilfe im Hauptmenu
- Bedienung EPG überarbeitet
- Pfeiltasten im OSD getauscht
- EPG Fehlermeldung wenn Aufnahme fehlschlägt

==================================================
[B]ZattooHiQ v1.6.1 [/B]02.04.2018 Steffen Rolapp
==================================================
- Kategorien überarbeitet
- Nächste Sendung in OSD eingefügt
- Updateroutine verbessert

==================================================
[B]ZattooHiQ v1.6 [/B]01.04.2018 Steffen Rolapp
==================================================
- Kategorien zum Hauptmenu hinzugefügt
- Umschalten von Favouriten und Allen in der Kanalliste
- Anzeige von Darsteller und Regiseur im OSD
- Suche überarbeitet

==================================================
[B]ZattooHiQ v1.5.7 [/B]25.03.2018 Steffen Rolapp
==================================================
- PiP Überarbeitet
- div Kleine Änderungen

﻿﻿﻿﻿==================================================
[B]ZattooHiQ v1.5.7 [/B]21.03.2018 Steffen Rolapp
==================================================
- Funktion PiP wieder hinzugefügt

==================================================
[B]ZattooHiQ v1.5.6 [/B]15.03.2018 Steffen Rolapp
==================================================
- Fehler im Epg mit Sprung in die Sommerzeit behoben

==================================================
[B]ZattooHiQ v1.5.4.3 [/B]15.03.2018 Steffen Rolapp